# NewProject

./: .gitignore  .gitmodules  .gitmodules.save  Cargo.toml  README.md   dockerfile   install-packages.sh 
Api/: Makefile.tests  README.tests.md
Api/emag-api-main/: Cargo.toml  README.md
Api/emag-api-main/src/: commands.rs  emag.rs  lib.rs  objects.rs
Api/example-api/: Cargo.toml  README.md
Api/example-api/src/: example.rs  lib.rs
Api/iobc-supervisor-api/: test.txt
Api/isis-eps-api-main/: Cargo.toml  README.md
Api/isis-eps-api-main/src/: config.rs  eps.rs  error.rs  lib.rs  objects.rs
Api/system-api/: .gitignore  Cargo.toml  README.md
Api/system-api/src/: config.rs  logger.rs
Api/test-framework/: Cargo.toml  README.md
Api/test-framework/src/: lib.rs  runner.rs  utils.rs
Api/test-framework/src/interfaces/: i2c.rs  mod.rs  spi.rs  uart.rs
Api/test-framework/src/mocks/: i2c.rs  mod.rs  spi.rs  uart.rs
Api/test-framework/templates/: Makefile.template  README.md.template  mock_template.c  mock_template.h  test_template.c
c_learn/: cweek1
libs/cubeos-core/: Cargo.toml  README.md
libs/cubeos-core/src/: command.rs  error.rs  last.rs  lib.rs  ping.rs
services/cubeos-app/: Cargo.toml  README.md
services/cubeos-app/src/: app.rs  app_macro.rs  main.rs  power.rs
services/cubeos-service/: Cargo.toml  README.md  dockerfile   install-packages.sh 
services/cubeos-service/src/: main.rs  service.rs
