[package]
name = "example-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
failure = "0.1.8"
serial = "0.4.0"
log = "0.4"
# cubeos-service = { git = "ssh://git@github.com/Cube-OS/cubeos-service.git", feature = ["api"]}
cubeos-service = { path = "../cubeos-service", feature = ["api"]}
uart-rs = { git = "ssh://git@github.com/Cube-OS/uart-rs.git" }
i2c-rs = { git = "ssh://git@github.com/Cube-OS/i2c-rs.git" }
spi-rs = { git = "ssh://git@github.com/Cube-OS/spi-rs.git" }
udp-rs = { git = "ssh://git@github.com/Cube-OS/udp-rs.git" }
strum = "0.24"
strum_macros = "0.24"
