[package]
name = "kubos-system"
version = "0.2.0"
authors = ["Marshall Culpepper <marshall@kubos.com>, Patrick Oppel <patrick.oppel@sydney.edu.au"]
edition = "2018"
repository = "https://github.com/Cube-OS/kubos-system"

[dependencies]
failure = "0.1.2"
syslog = "^6.0.1"
log = "^0.4.8"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
simplelog = "^0.12.0"

[dev-dependencies]
tempfile = "3"
