[package]
name = "hardware-test-framework"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A black-box testing framework for hardware interfaces"
license = "MIT"

[dependencies]
rstest = "0.18.2"
test-case = "3.3.1"
mockall = "0.12.1"
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"

[dev-dependencies]
cargo-tarpaulin = "0.21.0"
tokio-test = "0.4"

[lib]
name = "hardware_test_framework"
path = "src/lib.rs"

[[test]]
name = "main"
path = "tests/main.rs"

[[test]]
name = "isis"
path = "tests/isis/mod.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 0
debug = true 