[package]
name = "cubeos-core"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Oppel <patrick.oppel94@gmail.com>"]
repository = "https://github.com/Cube-OS/cubeos-core"

[dependencies]
thiserror = "2.0.11"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
kubos-system = { git = "ssh://git@github.com/Cube-OS/kubos-system.git", branch = "main" }
nix = { version = "0.29.0", optional = true }
diesel = { version = "2.0", features = ["sqlite"], optional = true }
syslog = "7.0.0"
serial = "0.4.0"
uart-rs = { git = "ssh://git@github.com/Cube-OS/uart-rs.git", branch = "main" }

[features]
default = ["nix", "diesel"]
nix = ["dep:nix"]
diesel = ["dep:diesel"]